add a header using flexbox to poistion the boxes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
         <li class="menu-listmenu__item"><a href="" class="menu-listmenu__link">Movies</a></li>
     </ul>
    </div>
+
+   <header class="indexheader">
+    <div class="indexheader__titlecontainer">
+        <h1 class="indexheader__title">My favorite games</h1>
+    </div>
+    <div class="indexheader__textcontainer">
+        <p class="indexheader__text">
+            A short recopilation about my favorite games in all history.
+        </p>
+        <p class="indexheader__text">There are many title that maybe can be commercial but its 100% my opinion.
+        </p>
+        <p class="indexheader__text">You can follow me in my social networks on the right and left</p>
+    </div>
+   </header>
     
   
     
